k8s-apps/secretpass/backend-deployment-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-secretpass
  namespace: secretpass
  annotations:
    # annotations for keel to update the image
    keel.sh/policy: "all"
    keel.sh/trigger: "poll"
    keel.sh/pollSchedule: "@every 3m"
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # topologySpreadConstraints:
      #   - maxSkew: 1
      #     topologyKey: "kubernetes.io/hostname"
      #     whenUnsatisfiable: ScheduleAnyway
      #     labelSelector:
      #       matchLabels:
      #         app: backend  
      containers:
      - name: http
        image: shlomobarzili/secretpass-backend:v3.0.0
        imagePullPolicy: Always
        ports:
        - name: backend
          containerPort: 5050
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi  
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: secretpass
spec:
  selector:
    app: backend
  type: ClusterIP 
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
