k8s-apps/secretpass/db-deploment-svc.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: secretpass
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: mongodb
spec:
  # create dns name for each pod mongodb
  serviceName: mongodb-service
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        command:
        - mongod
        - "--bind_ip_all"
        - "--replSet"
        - rs0
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi

        volumeMounts:
        - name: mongo-pvc
          mountPath: /data/db # default path should be /data/db its for mongodb
  # create PVC for each pod mongodb
  volumeClaimTemplates:
    - metadata: 
        name: mongo-pvc
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path   # reference from StorageClass defult k3s
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: secretpass
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
