k8s-apps/secretpass/fronted-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fronted
  namespace: secretpass
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - secretpass.spider-shlomo.com
    secretName: secretpass-app-tls
  rules:
  - host: secretpass.spider-shlomo.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fronted-svc
              port:
                number: 3000
        - path: /remote/saml/
          pathType: Prefix
          backend:
            service:
              name: fronted-svc
              port:
                number: 3000      

        # - path: /static/js/bundle.js
        #   pathType: Exact
        #   backend:
        #     service:
        #       name: react-svc
        #       port:
        #         number: 3000     

        # - path: /manifest.json
        #   pathType: Exact
        #   backend:
        #     service:
        #       name: react-svc
        #       port:
        #         number: 3000              

        # - path: /register
        #   pathType: Exact
        #   backend:
        #     service:
        #       name: react-svc
        #       port:
        #         number: 3000     

        # - path: /login
        #   pathType: Exact
        #   backend:
        #     service:
        #       name: react-svc
        #       port:
        #         number: 3000 

        # - path: /add-product
        #   pathType: Exact
        #   backend:
        #     service:
        #       name: react-svc
        #       port:
        #         number: 3000
